.k8s/mysite-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-app-deployment
  namespace: personal-website
  labels:
    application: personal-website-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website-app
      namespace: personal-website
  template:
    metadata:
      labels:
        app: personal-website-app
        namespace: personal-website
    spec:
      containers:
        - name: personal-website-app
          image: hossamgbm/personal-website-app:81
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 250Mi
              cpu: 200m
