.k8s/mysite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong

spec:
  tls:
  - hosts:
    - hossam.io
    secretName: mysite-ingress-tls
  rules:
  - host: hossam.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-website-app-svc
            port:
              number: 80
